--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -16,3 +16,6 @@ rustflags = [
   "-C", "link-arg=-undefined",
   "-C", "link-arg=dynamic_lookup",
 ]
+
+[target.x86_64-unknown-linux-musl]
+linker = "rust-lld"
