--- a/crates/tx_burn_multitoken/Cargo.toml
+++ b/crates/tx_burn_multitoken/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tx_mint_multitoken"
+name = "tx_burn_multitoken"
 authors = ["Heliax <hello@heliax.dev>"]
 license = "GPL-3.0"
 version = "0.0.0"
