--- a/crates/tx_mint_multitoken/Cargo.toml
+++ b/crates/tx_mint_multitoken/Cargo.toml
@@ -17,3 +17,5 @@ eyre = "0.6.8"
 
 [dev-dependencies]
 anoma_tests = {git = "https://github.com/anoma/anoma"}
+anoma = {git = "https://github.com/anoma/anoma"}
+rand = "0.8"
