--- a/crates/vp_multitoken/Cargo.toml
+++ b/crates/vp_multitoken/Cargo.toml
@@ -14,6 +14,7 @@ borsh = "0.9.0"
 wee_alloc = "0.4.5"
 getrandom = { version = "0.2", features = ["custom"] }
 eyre = "0.6.8"
+shared = {path = "../shared" }
 
 [dev-dependencies]
 anoma_tests = {git = "https://github.com/anoma/anoma"}
