--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [lib]
 crate-type = ["lib"]
+
+[dependencies]
+anoma_tx_prelude = {git = "https://github.com/anoma/anoma"}
+borsh = "0.9.0"
+serde = {version = "1.0.125", features = ["derive"]}
