--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -13,3 +13,6 @@ anoma_tx_prelude = {git = "https://github.com/anoma/anoma"}
 borsh = "0.9.0"
 eyre = "0.6.8"
 serde = {version = "1.0.125", features = ["derive"]}
+
+[dev-dependencies]
+anoma = {git = "https://github.com/anoma/anoma"}
