--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 crate-type = ["lib"]
 
 [dependencies]
-anoma_tx_prelude = {git = "https://github.com/anoma/anoma"}
+namada_tx_prelude = {git = "https://github.com/anoma/namada"}
 borsh = "0.9.0"
 eyre = "0.6.8"
 serde = {version = "1.0.125", features = ["derive"]}
 
 [dev-dependencies]
-anoma = {git = "https://github.com/anoma/anoma"}
-anoma_tests = {git = "https://github.com/anoma/anoma"}
+namada = {git = "https://github.com/anoma/namada"}
+namada_tests = {git = "https://github.com/anoma/namada"}
