Patch chrono to avoid pulling in wasm-bindgen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,16 @@ members = [
 ]
 
 [patch.crates-io]
-# should match wasm/wasm_source/Cargo.toml in the Anoma repo
-# TODO temp patch for <https://github.com/near/borsh-rs/issues/82>, <https://github.com/near/borsh-rs/issues/84> and more tba.
+# patches here should include patches done by wasm/wasm_source/Cargo.toml in the Namada repo
 borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
 borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
 borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
 borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
+# TODO: later versions of chrono pull in wasm-bindgen, which must be avoided, workaround by sticking with v0.4.19 for the moment
+chrono = {git = "https://github.com/chronotope/chrono.git", rev = "v0.4.19"}
 
 [patch."https://github.com/anoma/namada"]
-# specify the specific version of Anoma being worked against here
+# specify the specific version of Namada being worked against here
 # https://stackoverflow.com/a/72261235/2387626
 namada_tx_prelude = {git = "https://github.com/anoma/namada?rev=v0.7.1"}
 namada_vp_prelude = {git = "https://github.com/anoma/namada?rev=v0.7.1"}
