--- a/crates/test_runners/Cargo.toml
+++ b/crates/test_runners/Cargo.toml
@@ -5,10 +5,6 @@ license = "GPL-3.0"
 version = "0.0.0"
 edition = "2021"
 
-[lib]
-name = "test_runners"
-path = "src/lib/mod.rs"
-
 [[bin]]
 name = "consecutive_mints"
 path = "src/bin/consecutive_mints/main.rs"
@@ -19,6 +15,7 @@ path = "src/bin/mint_then_burn/main.rs"
 
 [dependencies]
 shared = { path = "../shared" }
+test_runner = { git = "https://github.com/anoma/test_runner.git" }
 namada = {git = "https://github.com/anoma/namada", features = ["rand"]}
 borsh = "0.9.0"
 rand = "0.8"
