--- a/crates/e2e_tests/Cargo.toml
+++ b/crates/e2e_tests/Cargo.toml
@@ -16,6 +16,8 @@ path = "src/bin/mint_then_burn/main.rs"
 [dependencies]
 shared = { path = "../shared" }
 test_runner = { git = "https://github.com/anoma/e2e-test-helpers", tag = "v0.1.0" }
-namada = {git = "https://github.com/anoma/namada", features = ["rand"]}
+namada = { git = "https://github.com/anoma/namada", rev = "v0.7.1", features = [
+    "rand",
+] }
 rand = "0.8"
 eyre = "0.6.8"
