--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 crate-type = ["lib"]
 
 [dependencies]
-namada_tx_prelude = {git = "https://github.com/anoma/namada"}
+namada_tx_prelude = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
 borsh = "0.9.0"
 eyre = "0.6.8"
-serde = {version = "1.0.125", features = ["derive"]}
+serde = { version = "1.0.125", features = ["derive"] }
 
 [dev-dependencies]
-namada = {git = "https://github.com/anoma/namada"}
-namada_tests = {git = "https://github.com/anoma/namada"}
+namada = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
+namada_tests = { git = "https://github.com/anoma/namada", rev = "v0.7.1" }
