--- a/crates/e2e_tests/Cargo.toml
+++ b/crates/e2e_tests/Cargo.toml
@@ -15,8 +15,8 @@ path = "src/bin/mint_then_burn/main.rs"
 
 [dependencies]
 shared = { path = "../shared" }
-test_runner = { git = "https://github.com/anoma/e2e-test-helpers", tag = "v0.1.0" }
-namada = { git = "https://github.com/anoma/namada", rev = "v0.7.1", features = [
+test_runner = { git = "https://github.com/anoma/e2e-test-helpers", rev = "f64f7c1549cb1d4cea677fa445aa81aaa4c1aebe" }
+namada = { git = "https://github.com/anoma/namada", tag = "v0.9.0", features = [
     "rand",
 ] }
 rand = "0.8"
