Update for namada v0.10.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,14 @@ ibc-proto = { git = "https://github.com/heliaxdev/ibc-rs.git", rev = "f4703dfe2c
 # patched to a commit on the `eth-bridge-integration` branch of our fork
 tower-abci = { git = "https://github.com/heliaxdev/tower-abci.git", rev = "fcc0014d0bda707109901abfa1b2f782d242f082" }
 
+# workaround to <https://github.com/ferrilab/bitvec/issues/199>
+funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }
+
 [patch."https://github.com/anoma/namada"]
-namada = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.9.0" }
-namada_tests = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.9.0" }
-namada_tx_prelude = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.9.0" }
-namada_vp_prelude = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.9.0" }
+namada = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.10.1" }
+namada_tests = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.10.1" }
+namada_tx_prelude = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.10.1" }
+namada_vp_prelude = { git = "https://github.com/anoma/namada?branch=main", tag = "v0.10.1" }
 
 [profile.dev]
 # smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
