Update Docker for namada v0.11

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ version: "3.9"
 services:
   ledger:
     build: .
-    platform: linux/amd64
     ports:
       - '127.0.0.1:8123:8123'
       - '127.0.0.1:26657:26657'
   adhoc:
     build: .
-    platform: linux/amd64
     environment:
-      &anoma_env
-      ANOMA_NETWORK_CONFIGS_SERVER: http://ledger:8123
-      ANOMA_LEDGER_ADDRESS: ledger:26657
+      &namada_env
+      NAMADA_NETWORK_CONFIGS_SERVER: http://ledger:8123
+      NAMADA_LEDGER_ADDRESS: ledger:26657
     command:
       - /bin/bash
       - -c
@@ -22,8 +20,7 @@ services:
       - ledger
   testrunner:
     build: .
-    platform: linux/amd64
-    environment: *anoma_env
+    environment: *namada_env
     command:
       - /bin/bash
       - -c
